@@ -1,0 +1,92 @@
+===================================================
+Stock Shipment Out Same Storage and Output Scenario
+===================================================
+
+Imports::
+
+    >>> from decimal import Decimal
+    >>> from proteus import Model
+    >>> from trytond.tests.tools import activate_modules
+    >>> from trytond.modules.company.tests.tools import create_company, \
+    ...     get_company
+
+Install stock Module::
+
+    >>> config = activate_modules('stock')
+
+Create company::
+
+    >>> _ = create_company()
+    >>> company = get_company()
+
+Create customer::
+
+    >>> Party = Model.get('party.party')
+    >>> customer = Party(name='Customer')
+    >>> customer.save()
+
+Create product::
+
+    >>> ProductUom = Model.get('product.uom')
+    >>> ProductTemplate = Model.get('product.template')
+    >>> Product = Model.get('product.product')
+    >>> unit, = ProductUom.find([('name', '=', 'Unit')])
+    >>> product = Product()
+    >>> template = ProductTemplate()
+    >>> template.name = 'Product'
+    >>> template.default_uom = unit
+    >>> template.type = 'goods'
+    >>> template.list_price = Decimal('20')
+    >>> template.cost_price = Decimal('8')
+    >>> template.save()
+    >>> product.template = template
+    >>> product.save()
+
+Get stock locations::
+
+    >>> Location = Model.get('stock.location')
+    >>> warehouse_loc, = Location.find([('code', '=', 'WH')])
+    >>> customer_loc, = Location.find([('code', '=', 'CUS')])
+    >>> storage_loc, = Location.find([('code', '=', 'STO')])
+    >>> warehouse_loc.output_location = storage_loc
+    >>> warehouse_loc.save()
+
+Create Shipment Out::
+
+    >>> ShipmentOut = Model.get('stock.shipment.out')
+    >>> shipment_out = ShipmentOut()
+    >>> shipment_out.customer = customer
+    >>> shipment_out.warehouse = warehouse_loc
+    >>> shipment_out.company = company
+    >>> move = shipment_out.outgoing_moves.new()
+    >>> move.product = product
+    >>> move.uom = unit
+    >>> move.quantity = 1
+    >>> move.from_location = storage_loc
+    >>> move.to_location = customer_loc
+    >>> shipment_out.save()
+
+    >>> len(shipment_out.outgoing_moves)
+    1
+    >>> len(shipment_out.inventory_moves)
+    0
+
+Set the shipment state to waiting::
+
+    >>> shipment_out.click('wait')
+    >>> shipment_out.state
+    u'waiting'
+    >>> len(shipment_out.outgoing_moves)
+    1
+    >>> len(shipment_out.inventory_moves)
+    0
+
+Assign the shipment::
+
+    >>> shipment_out.click('pack')
+    >>> shipment_out.state
+    u'packed'
+    >>> len(shipment_out.outgoing_moves)
+    1
+    >>> len(shipment_out.inventory_moves)
+    0
