@@ -1,3 +1,5 @@
+* Manage same picking/storage and output location
+
 Version 4.2.0 - 2016-11-28
 * Bug fixes (see mercurial logs for details)
 * Make inventory number always readonly
